--- a/content/templates/subject/showcase.html
+++ b/content/templates/subject/showcase.html
@@ -1,7 +1,7 @@
 {%- import './macros/slider.html' as renderS -%}
 {%- import './macros/tooltip.html' as renderT -%}
 
-{%- set section_name = d['Title'] -%}
+{%- set section_name = d['Title'].decode('utf-8') -%}
 
 <div class="tmtkMesaNovedades" id="mesa">
 	<!-- mesa y t&iacute;tulos de secciones -->
