--- a/content/templates/macros/slider.html
+++ b/content/templates/macros/slider.html
@@ -70,7 +70,7 @@
                             {%- else       -%}Editorial:
                             {%- endif -%}
                             <span class="product-imprint">
-                                <a href="/buscador/productos.jsp?seccion={{ section }}&amp;idSeccion={{ section }}&amp;criterioDeOrden=2&amp;claveDeBusqueda=porIDdeEditorial&amp;texto={{ imprint }}&amp;idEditor={{ p.ImprintId.decode('utf-8')|string }}" id="artEditor">{{ imprint}}</a>
+                                <a href="/buscador/productos.jsp?seccion={{ section }}&amp;idSeccion={{ section }}&amp;criterioDeOrden=2&amp;claveDeBusqueda=porIDdeEditorial&amp;texto={{ imprint }}&amp;idEditor={{ p.ImprintId|string }}" id="artEditor">{{ imprint }}</a>
                             </span><br>
                         {%- endif -%}
                         {%- if p.Rating -%}
