Load jquery.cookie.js for treeview state

--- a/content/templates/subject/index.html
+++ b/content/templates/subject/index.html
@@ -73,6 +73,7 @@
 	<!-- JQuery Carousel and qTip -->
 	<script type="text/javascript" src="{{ url.data }}/stage0/js/jquery.tinycarousel.js"></script>
 	<script type="text/javascript" src="{{ url.data }}/stage0/js/jquery.qtip.min.js"></script>
+	<script type="text/javascript" src="{{ url.data }}/stage0/js/jquery.cookie.js"></script>
 	<script type="text/javascript" src="{{ url.data }}/stage0/js/jquery.treeview.js"></script>
 	<!-- JFather -->
 	<script type="text/javascript" src="{{ url.data }}/stage0/js/jfather.js"></script>
