--- a/content/templates/macros/related.html
+++ b/content/templates/macros/related.html
@@ -257,7 +257,7 @@
 																						</td>
 
 																						<td class="divComprarPedir"><a
-																							href="javascript:carrito_AgregarArticulo({{ article.ProductId }});window.scrollTo(0,0);"
+																							href="javascript:APP.cartAdd({{ article.ProductId }});window.scrollTo(0,0);"
 																							rel="nofollow"><img
 																								src="{{ url.images }}/imagenes/libros/b-comprar.gif"
 																								alt="Comprar" border="0" /> </a>
