--- a/content/templates/product/product.html
+++ b/content/templates/product/product.html
@@ -43,7 +43,7 @@
 <div id="divCarrito" class="efectoCarritoMod" style="display:none">
 	<div class="efectoCarritoTxt"><span class="txtMsgCarritoOK" id="msgCarritoOK"></span><br /><div id="msgCarritoERROR" style="font-size:12;color:red"></div><span id="spnPrecioCarrito" class="txtPrecioCarrito">PRECIO: $ <span  class="txtPrecioCarrito" id="precioCarrito"></span>.-</span></div>
 	<div class="efectoCarritoImages"><img id="carritoImagen" src="" class="efectoCarritoImag"></div>
-	<div id="efectoCarritoB"><a href="javascript:carrito_CloseCarrito();"><img src="{{ url.images }}/imagenes/b-carrContinuar.gif" alt="Continuar" border="0"></a></div>
+	<div id="efectoCarritoB"><a href="javascript:APP.cartClose();"><img src="{{ url.images }}/imagenes/b-carrContinuar.gif" alt="Continuar" border="0"></a></div>
 </div>
 <!-- <tmpl_var contenidoSEO> -->
 <a href="/{{ getSection(d.Categoria_Seccion) }}" class="panelSeccAct"></a>
