Fix button text for Classics

--- a/content/templates/subject/showcase.html
+++ b/content/templates/subject/showcase.html
@@ -14,7 +14,7 @@
 	<div class="tmtkMesa-back">
 		<div class="tmtkMesaMenuMod">
 			<div class="tmtkMesaMenuTit"></div>
-            <button onclick="javascript:fillShowCase('Classics', null)">Recomendados</button>
+            <button onclick="javascript:fillShowCase('Classics', null)">Cl&aacute;sicos</button>
             <button onclick="javascript:fillShowCase('Showcase',null)">Bestsellers</button>
 		</div>
 		<div class="tmtkMesa">
