--- a/content/templates/subject/showcase.html
+++ b/content/templates/subject/showcase.html
@@ -14,8 +14,8 @@
 	<div class="tmtkMesa-back">
 		<div class="tmtkMesaMenuMod">
 			<div class="tmtkMesaMenuTit"></div>
-            <button onclick="javascript:fillShowCase('Classics', null)">Cl&aacute;sicos</button>
-            <button onclick="javascript:fillShowCase('Showcase',null)">Bestsellers</button>
+            <button onclick="javascript:fillShowCase('Showcase',null,false)">Bestsellers</button>
+            <button onclick="javascript:fillShowCase('Classics', null,false)">Cl&aacute;sicos</button>
 		</div>
 		<div class="tmtkMesa">
 			<table border="0" cellpadding="0" cellspacing="0">
