--- a/content/templates/home/index.html
+++ b/content/templates/home/index.html
@@ -70,7 +70,7 @@
 	<script type="text/javascript" src="{{ url.data }}/stage0/js/jquery.tinycarousel.js"></script>
 	<script type="text/javascript" src="{{ url.data }}/stage0/js/jquery.qtip.min.js"></script>
 	<!-- JFather -->
-	<script type="text/javascript" src="{{ url.data }}/stage0/js/jfather.js"></script>
+	<script type="text/javascript" src="{{ url.data }}/stage0/js/json2.min.js"></script>
 
 	<script type="text/javascript">
 	 	{% include "fragments/serialize.js" %}
