--- a/content/templates/subject/index.html
+++ b/content/templates/subject/index.html
@@ -76,7 +76,7 @@
 	<script type="text/javascript" src="{{ url.data }}/stage0/js/jquery.cookie.js"></script>
 	<script type="text/javascript" src="{{ url.data }}/stage0/js/jquery.treeview.js"></script>
 	<!-- JFather -->
-	<script type="text/javascript" src="{{ url.data }}/stage0/js/jfather.js"></script>
+	<script type="text/javascript" src="{{ url.data }}/stage0/js/json2.min.js"></script>
 
 	<script type="text/javascript">
 	 	{% include "fragments/serialize.js" %}
