--- a/content/templates/product/index.html
+++ b/content/templates/product/index.html
@@ -112,7 +112,8 @@
 				available = 'true';
 			{%- endif %}
 			var id = '{{ d.EntityId }}';
-			addLastVisited(new Article(url, title, urlPrincipalAttribute, principalAttribute, urlGroup, group, price, available, id));
+			//addLastVisited(new Article(url, title, urlPrincipalAttribute, principalAttribute, urlGroup, group, price, available, id));
+			addLastVisited(new Article('', title, '', '', '', '', '', available, id));
 		});
 
 		/* parse messages */
