--- a/content/templates/macros/comments.html
+++ b/content/templates/macros/comments.html
@@ -44,13 +44,13 @@
 	            </div>
 	            <div class="calificacionMod">
 	                <span>Calificaci&oacute;n del producto:</span>
-	                {%- for number in range(0, 4) -%}
-	                	{%- if number+1 <= article.Rating|int -%}
-	                		<div class="calificacionStar"></div>
-	                	{%- else -%}
-	                		<div class="calificacionStarDes"></div>
-	                	{%- endif %}
-	                {%- endfor %}
+	                {%- set s = article.Rating|round|int -%}
+					{%- for i in range(s) -%}
+	                    <div class="calificacionStar"></div>
+	                {%- endfor -%}
+	                {%- for i in range(5 - s) -%}
+	                    <div class="calificacionStarDes"></div>
+	                {%- endfor -%}
 	            {%- if sectionMore -%}
 	            	<a href="/{{ getSection(article.Categoria_Seccion)|trim }}#coment" class="vermas">+ comentarios de {{ getSection(article.Categoria_Seccion)|trim }}</a>
 	            {%- endif %}
