--- a/content/templates/macros/productRelated.html
+++ b/content/templates/macros/productRelated.html
@@ -11,7 +11,7 @@
 			    </div>
 			    </div>
 			    <a href="{{ article.LinkBase }}" class="fTitulos">{{ article.Title.decode('utf-8')|e }}</a>
-			    <span>Precio:{{ article.CurrencyCode_desc }}&nbsp;{{ "%.2f"|format(article.PriceAmount) }}.-</span>
+			    <span>Precio:{{ article.CurrencyCode_desc.decode('utf-8') }}&nbsp;{{ "%.2f"|format(article.PriceAmount) }}.-</span>
 			    <div class="calificacionMod">
 			    	<span>Calificaci&oacute;n:</span>
 			      	{%- set s = article.Rating|round|int -%}
