Undo one encode too many

--- a/content/templates/macros/slider.html
+++ b/content/templates/macros/slider.html
@@ -38,7 +38,7 @@
         {%- endif -%}
                 <td class="product-entry">
                     <a href="{{ product_url }}" title="{{ title }}">
-                        <img src="{{ url.images ~ p.CoverSmall|e }}" width="98" alt="{{ title.decode('utf-8')|e }}">
+                        <img src="{{ url.images ~ p.CoverSmall|e }}" width="98" alt="{{ title }}">
                     </a>
 
                     {#- POP UP CONTENT HOLDER -#}
