--- a/content/templates/product/product.html
+++ b/content/templates/product/product.html
@@ -60,7 +60,7 @@
             <span>I.S.B.N : {{ d.Identifiers[0].IDValue }}</span>
             {%- endif %}
             <span>Clasificaci&oacute;n: {%- for categorie in d.Categories -%}<a href="{{ categorie.URL }}">{{ categorie.Title.decode('utf-8')|e }}</a>{%- if not loop.last -%}&nbsp;&raquo;&nbsp;{%- endif %} {%- endfor %}</span>
-            {%- if d.ProductForm -%}<span>Formato: {{ d.ProductForm_desc.decode('utf-8')|e }}</span>{%- endif %}
+            {%- if d.ProductForm_desc -%}<span>Formato: {{ d.ProductForm_desc.decode('utf-8')|e }}</span>{%- endif %}
             <span>Disponibilidad: {{ d.ProductAvailability_desc.decode('utf-8')|e }}</span>
             {%- if d.ExtentUnit -%}<span>{{ d.ExtentUnit_desc.decode('utf-8')|e }}:{{ d.ExtentValue }}</span>{%- endif %}
             {%- set pd = d.PublishingDateValue -%}
