Fix missing style issues

--- a/content/templates/home/index.html
+++ b/content/templates/home/index.html
@@ -2,12 +2,9 @@
 
 {% block head_extra %}
     <link type="text/css" rel="stylesheet" href="{{ url.data }}/stage0/css/jquery.qtip.min.css">
-    <style type="text/css">
-        {% include "home/styles.css" %}
-        {% include "fragments/tinycarousel.css" %}
-        {% include "fragments/showcase.css" %}
-        {% include "fragments/last_visited.css" %}
-    </style>
+    <link type="text/css" rel="stylesheet" href="{{ url.data }}/stage0/css/tinycarousel.css">
+    <link type="text/css" rel="stylesheet" href="{{ url.data }}/stage0/css/showcase.css">
+    <link type="text/css" rel="stylesheet" href="{{ url.data }}/stage0/css/last_visited.css">
 {% endblock %}
 
 {% block search_box %}
