agregado del link sobre la imagen principal de la seccion

--- a/content/templates/subject/index.html
+++ b/content/templates/subject/index.html
@@ -90,6 +90,7 @@
 {% block canvas_content -%}
 <div class="barraCentral" id="barraCentral">
     <div id="seccionTematika">
+    	<a href="/{{ section_name }}" class="panelSeccAct"></a>
         <div id="tree">
             {% include "fragments/tree.html" %}
         </div>
