--- a/content/templates/product/index.html
+++ b/content/templates/product/index.html
@@ -115,7 +115,7 @@
 				available = 'true';
 			{%- endif %}
 			var id = '{{ d.EntityId }}';
-			//addLastVisited(new Article(url, title, urlPrincipalAttribute, principalAttribute, urlGroup, group, price, available, id));
+			addLastVisited(new Article(url, title, urlPrincipalAttribute, principalAttribute, urlGroup, group, price, available, id));
 		});
 
 		/* parse messages */
