--- a/content/templates/product/index.html
+++ b/content/templates/product/index.html
@@ -72,6 +72,7 @@
 	    {% include "fragments/relatedProduct.js" %}
 	    {% include "fragments/dropDownMenu.js" %}
 	    {% include "fragments/last_visited.js" %}
+	    {% include "fragments/maximize_img.js" %}
 	</script>
 
 	<!-- Data Scripts -->
