New path for product JS data files
While there fix urls for sample for CD product

--- a/content/templates/product/index.html
+++ b/content/templates/product/index.html
@@ -77,9 +77,9 @@
 
 	<!-- Data Scripts -->
 	<script type="text/javascript" src="{{ url.data }}/home-exchange.js"></script>
-	<script type="text/javascript" src="{{ url.data }}{{ d.LinkBase }}-comments.js"></script>
-	<script type="text/javascript" src="{{ url.data }}{{ d.LinkBase }}-related.js"></script>
-	<script type="text/javascript" src="{{ url.data }}{{ d.LinkBase }}-price.js"></script>
+	<script type="text/javascript" src="{{ url.data }}/comments{{ d.LinkBase }}.js"></script>
+	<script type="text/javascript" src="{{ url.data }}/related{{ d.LinkBase }}.js"></script>
+	<script type="text/javascript" src="{{ url.data }}/price{{ d.LinkBase }}.js"></script>
 
 	<script type="text/javascript">
 
