--- a/content/templates/product/product.html
+++ b/content/templates/product/product.html
@@ -134,8 +134,7 @@
 	        	</div>
 			</div>
 		{%- endif %}
-		<a name="coment"></a><div class="dSolapas" id="comentarios"><div class="tmtkMesaMenuMod"><img class="solapasTitComent" alt="Comentarios" src="{{ url.images }}/imagenes/rediseno/imagenes/comun/t-comentarios.gif" /></div></div>
-		<div id="divComentarios"><div id="comments_detail"></div></div>
+        <div id="comments_detail"></div>
 		{%- if getOnixItem(d.Texts, '40') -%}
 			<div class="dSolapas" id="entrevista">
 		    	<div class="tmtkMesaMenuMod"><div class="solapasTitEntrev" title="Entrevista"/></div></div>
