--- a/content/templates/product/index.html
+++ b/content/templates/product/index.html
@@ -11,6 +11,8 @@
     {% elif section == 3 %}
         <link href="/stage0/css/games.css" rel="stylesheet" type="text/css">
     {% endif %}
+    <link rel="canonical" href="http://{{ url.dynamic }}{{ d['LinkBase'] }}.htm">
+
 {% endblock %}
 
 {% block search_box %}
