--- a/content/templates/product/product.html
+++ b/content/templates/product/product.html
@@ -154,6 +154,6 @@
 <input type="hidden" value="{{ d.PriceAmount }}" id="precio">
 <input type="hidden" value="{{ d.EntityId }}" id="idArticulo">
 <input type="hidden" value="{{ getAvailability(d.ProductAvailability) }}" id="estaDisponible">
-<input type="hidden" value="{{ url }}" id="urlPage">
+{# XXX what? <input type="hidden" value="{{ url }}" id="urlPage"> #}
 <input type="hidden" value="{{ d.Title.decode('utf-8')|e }}" id="titulParaRedSocial">
 <div id="dRecomendaciones" style="height: 550px;" ><div id="divArticulosRelacionados"><div id="related_detail"><div class="dRecomendTit" ></div></div></div></div>
