--- a/content/templates/macros/productComments.html
+++ b/content/templates/macros/productComments.html
@@ -15,6 +15,7 @@
 		                  </span>
 		                  <div class="calificacionMod">
 		                      <span>Calificaci&oacute;n del producto:</span>
+		                      {%- if comment.Rating -%}
 					                {%- set s = comment.Rating|round|int -%}
 									{%- for i in range(s) -%}
 	                    				<div class="calificacionStar"></div>
@@ -22,6 +23,7 @@
 	                				{%- for i in range(5 - s) -%}
 	                    				<div class="calificacionStarDes"></div>
 	                				{%- endfor -%}
+	                		  {%- endif -%}
 		                  </div>
 		              </div>
 		              <div class="dComentsMod">
