--- a/content/templates/macros/productRelated.html
+++ b/content/templates/macros/productRelated.html
@@ -14,13 +14,15 @@
 			    <span>Precio:{{ article.CurrencyCode_desc.decode('utf-8') }}&nbsp;{{ "%.2f"|format(article.PriceAmount) }}.-</span>
 			    <div class="calificacionMod">
 			    	<span>Calificaci&oacute;n:</span>
-			      	{%- set s = article.Rating|round|int -%}
-					{%- for i in range(s) -%}
-	                    <div class="calificacionStar"></div>
-	                {%- endfor -%}
-	                {%- for i in range(5 - s) -%}
-	                    <div class="calificacionStarDes"></div>
-	                {%- endfor -%}
+			    	{%- if article.Rating -%}
+				      	{%- set s = article.Rating|round|int -%}
+						{%- for i in range(s) -%}
+		                    <div class="calificacionStar"></div>
+		                {%- endfor -%}
+		                {%- for i in range(5 - s) -%}
+		                    <div class="calificacionStarDes"></div>
+		                {%- endfor -%}
+		             {%- endif -%}
 			    </div>
 		 {%- endfor %}
 		 </div>
