agregado de funcionalidad UI en el detalle de producto

--- a/content/templates/product/index.html
+++ b/content/templates/product/index.html
@@ -68,6 +68,7 @@
 	<script type="text/javascript">
 		{% include "fragments/serialize.js" %}
 		{% include "fragments/exchange.js" %}
+		{% include "fragments/product.js" %}
 		{% include "fragments/price.js" %}
 	    {% include "fragments/comments.js" %}
 	    {% include "fragments/messages.js" %}
