--- a/content/templates/product/index.html
+++ b/content/templates/product/index.html
@@ -107,13 +107,13 @@
 			var title = '{{ d.Title.decode("utf-8")|e }}';
 			var urlPrincipalAttribute = null;
 			var principalAttribute = null;
-			{%- if d.Authors -%}
+			{%- if d.Authors and d.authors|length > 0 -%}
 				urlPrincipalAttribute = '{{ d.Authors[0].ContributorURL }}';
 				principalAttribute = '{{ d.Authors[0].ContributorName.decode("utf-8")|e }}';
 			{%- endif %}
 			var urlGroup = null;
 			var group = null;
-			{%- if d.Authors -%}
+			{%- if d.Categories and d.Categories|length > 0 -%}
 				var urlGroup = '{{ d.Categories[0].URL }}';
 				var group = '{{ d.Categories[0].Title.decode("utf-8")|e }}';
 			{%- endif %}
