--- a/content/templates/product/product.html
+++ b/content/templates/product/product.html
@@ -61,7 +61,13 @@
             {%- endif %}
             <span>Clasificaci&oacute;n: {%- for categorie in d.Categories -%}<a href="{{ categorie.URL }}">{{ categorie.Title.decode('utf-8')|e }}</a>{%- if not loop.last -%}&nbsp;&raquo;&nbsp;{%- endif %} {%- endfor %}</span>
             {%- if d.ProductForm_desc -%}<span>Formato: {{ d.ProductForm_desc.decode('utf-8')|e }}</span>{%- endif %}
-            <span>Disponibilidad: {{ d.ProductAvailability_desc.decode('utf-8')|e }}</span>
+
+            {%- if d.ProductAvailability == '21' and d.FulfillmentValue -%}
+                <span>Disponibilidad: Salida del dep&oacute;sito en {{ d.FulfillmentValue }} {{ d.FulfillmentType_desc|e }} h&aacute;biles</span>
+            {%- else  -%}
+                <span>Disponibilidad: Pedido especial</span>
+            {%- endif -%}
+
             {%- if d.ExtentUnit -%}<span>{{ d.ExtentUnit_desc.decode('utf-8')|e }}:{{ d.ExtentValue }}</span>{%- endif %}
             {%- set pd = d.PublishingDateValue -%}
             <span>Publicaci&oacute;n: {{- (pd[6:8], pd[4:6], pd[0:4])|join('/') -}} | Idioma: {{- languages[d.LanguageCode] -}}</span>
