Remove debug print

--- a/content/templates/macros/slider.html
+++ b/content/templates/macros/slider.html
@@ -175,10 +175,7 @@
         </table>
         </li>
     {%- endif %}
-{%- else -%} {#- product_list iterable -#}
-    XXXXXXXXX section: {{ prefix }}
-    XXXXXXXXX product_list: {{ product_list|pprint }}
-{%- endif -%}
+{%- endif -%} {#- product_list iterable -#}
     <li><table><tr><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td></tr></table></li>
     </ul>
 </div>
