--- a/content/templates/macros/related.html
+++ b/content/templates/macros/related.html
@@ -189,7 +189,7 @@
 {%- macro getCurrencySimbol(currency) -%}
 	{%- if currency == 'ARS' -%}
 		$
-	{%- enfid -%}
+	{%- endif -%}
 {%- endmacro -%}
 {# fin deficion macros #}
 {# comienzo del codigo principal del codigo de la pagina tmp #}
