--- a/content/templates/product/product.html
+++ b/content/templates/product/product.html
@@ -86,7 +86,7 @@
 				<label><a href="/Comentario?ID_ARTICULO={{ d.EntityId }}&idSeccion=">S&eacute; el primero en comentarlo!</a></label>
 			{%- endif %}
 			</div>
-			<div class="dInfoCalifBoton"><span><a href="/Comentario?ID_ARTICULO={{ d.EntityId }}&idSeccion="><div>AGREGAR COMENTARIO</div></a></div></div></div></div>
+			<div class="dInfoCalifBoton"><span><a href="/Comentario?ID_ARTICULO={{ d.EntityId }}&idSeccion="><div>AGREGAR COMENTARIO</div></a></span></div></div></div></div>
 		</div>
 	</div>
     <div id="dInfoCompl">
