--- a/content/templates/macros/productRelated.html
+++ b/content/templates/macros/productRelated.html
@@ -1,30 +1,36 @@
 {%- macro renderRelated(related_data, url) -%}
 	{%- if related_data is iterable -%}
+		{%- set count = 0 -%}
 		<div class="dRecomendTit">Obras relacionadas</div>
 		{%- for article in related_data -%}
-			<div class="dRecomendMod">
-			    <div class="tapaContenedor">
-			        <a href="{{ article.LinkBase }}">
-			        	<img src="{{ url.images ~ article.CoverSmall }}" class="tapaLibros">
-			        </a>
-			        <div class="tapaInfo" style="visibility: hidden;">
-			    </div>
-			    </div>
-			    <a href="{{ article.LinkBase }}" class="fTitulos">{{ article.Title.decode('utf-8')|e }}</a>
-			    <span>Precio:{{ article.CurrencyCode_desc.decode('utf-8') }}&nbsp;{{ "%.2f"|format(article.PriceAmount) }}.-</span>
-			    <div class="calificacionMod">
-			    	<span>Calificaci&oacute;n:</span>
-			    	{%- if article.Rating -%}
-				      	{%- set s = article.Rating|round|int -%}
-						{%- for i in range(s) -%}
-		                    <div class="calificacionStar"></div>
-		                {%- endfor -%}
-		                {%- for i in range(5 - s) -%}
-		                    <div class="calificacionStarDes"></div>
-		                {%- endfor -%}
-		             {%- endif -%}
-			    </div>
+		<div class="dRecomendMod">
+		    <div class="tapaContenedor">
+		        <a href="{{ article.LinkBase }}">
+		        	<img src="{{ url.images ~ article.CoverSmall }}" class="tapaLibros">
+		        </a>
+		        <div class="tapaInfo" style="visibility: hidden;">
+		    </div>
+		    </div>
+		    <a href="{{ article.LinkBase }}" class="fTitulos">{{ article.Title.decode('utf-8')|e }}</a>
+		    <span>Precio:{{ article.CurrencyCode_desc.decode('utf-8') }}&nbsp;{{ "%.2f"|format(article.PriceAmount) }}.-</span>
+		    <div class="calificacionMod">
+		    	<span>Calificaci&oacute;n:</span>
+		    	{%- if article.Rating -%}
+			      	{%- set s = article.Rating|round|int -%}
+					{%- for i in range(s) -%}
+	                    <div class="calificacionStar"></div>
+	                {%- endfor -%}
+	                {%- for i in range(5 - s) -%}
+	                    <div class="calificacionStarDes"></div>
+	                {%- endfor -%}
+	             {%- endif -%}
+		    </div>
+		    {%- if loop.last -%}
+		    	{%- set index = loop.index -%}
+		    	{%- for i in range(index) -%}
+		 			</div>
+				{%- endfor -%}
+		    {%- endif -%}
 		 {%- endfor %}
-		 </div>
 	{%- endif %}
 {%- endmacro %}
